# nearquake

./: .codacy.yml  .codecov.yml  .coverage  .dockerignore  .env.test  .gitignore  .mergify.yml  CLAUDE.md  Dockerfile  Makefile  README.md  aws-infrastructure.yml  coverage.xml  crontab  docker-compose.yml  init.sql  install_docker.sh  log_management.sh  main.py  pyproject.toml  requirements.txt  run_post_daily_quakes.py  run_upload_quake.py  run_weekly_recap.py  workspace.yaml
.github/: dependabot.yml
.github/workflows/: bandit.yml  black.yml  codacy.yml  codeql-analysis.yml  codeql.yml  deploy-ecr.yml  hadolint.yml  testing.yml  unitesting.yml  workflow.yml
SQL/: count_quake.sql  count_rows.sql  max_time.sql
alembic/: env.py
app/: db.py
app/test/: db_test.py
config/: airflow.cfg
dag/models/: quake_upload.py  tweeter.py  utils.py
dags/: dag_twitter_scheduler.py  run.py  run_post_daily_quakes.py
dags/models/: __init__.py  quake_upload.py  tweeter.py  utils.py
models/: __init__.py  quake_upload.py  tweeter.py  utils.py
nearquake/: DbOperator.py  __init__.py  config.py  data_processor.py  gemini_client.py  graphics_generator.py  open_ai_client.py  post_manager.py  quake_upload.py  tweet_processor.py  usgs_data_fetch.py  utils.py
nearquake/app/: __init__.py  db.py
nearquake/cli/: __init__.py  command_handlers.py
nearquake/config/: __init__.py  secrets_manager.py
nearquake/dashboard/: app.py
nearquake/test/: README.md  config_test.py  conftest.py  db_test.py  integration_test.py  test_cli.py  test_command_handlers.py  (+9 more)
postgres/: setup.sql
(+27 files in other folders)
