[project]
name = "nearquake"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.5",
    "atproto>=0.0.62",
    "boto3>=1.34.0",
    "botocore>=1.40.21",
    "colorlog>=6.9.0",
    "openai>=1.102.0",
    "pillow>=11.3.0",
    "psycopg>=3.2.9",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy>=2.0.43",
    "tqdm>=4.67.1",
    "tweepy>=4.16.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0", 
    "black>=23.0.0",
    "isort>=5.0.0",
]
